--- a/ISRO/style.css
+++ b/ISRO/style.css
@@ -14,12 +14,13 @@ body {
 .navbar {
     display: flex;
     justify-content: space-between;
-    
+    position: fixed;
     width: 100%;
-    height: 4rem;
+    height: 10vh;
     padding: 1rem 3rem;
     overflow: hidden;
     background-color: rgb(1, 4, 19);
+    
   }
   
   .navbar ul {
@@ -114,6 +115,53 @@ body {
     height: 3rem;
     width: 3rem;
     
+}
+
+.page1{
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+.leftsection{
+    display: flex;
+    color: #fff;
+    float: left;
+    flex-direction: column;
+    padding: 10px;
+    gap: 6px;
+    margin-right: 30rem;
+   
+
+}
+
+.leftsection p{
+  font-size: small;
+}
+
+.page2{
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.page2 p{
+  font-size: 2rem;
+  font-weight: bold;
+  color: #fff;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 12rem;
+  
+
+
 }
 
 
